# WallStreetBots

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BEST_PRACTICES_AUDIT.md  BUBBLE_AWARE_2025_PROFILE.md  CLAUDE.md  CODEX_REVIEW_PROMPT.md  CRITICAL_FIXES_IMPLEMENTED.md  CRITICAL_GAPS_ANALYSIS.md  ETRADE_EXPLANATION.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GAPS_ANALYSIS.md  LOCAL_RISK_MODELS_GUIDE.md  MANIFEST.in  MONTH_5_6_COMPLETION_REPORT.md  MONTH_5_6_INTEGRATION_COMPLETE.md  PRODUCTION_READINESS_PLAN.md  PROJECT_ARCHITECTURE_MAP.md  QUICKSTART.md  README.md  README_OLD.md  README_OPTIONS_SYSTEM.md  README_PRODUCTION.md  REAL_MONEY_REQUIREMENTS.md  RISK_BUNDLE_COMPARISON.md  RISK_INTEGRATION_STATUS.md  SIMPLE_PRODUCTION_PLAN.md  SOPHISTICATED_RISK_MODELS_2025.md  STRATEGY_INTEGRATION_STATUS.md  TEST_RESULTS_SUMMARY.md  TRADING_STRATEGIES_GUIDE.md  TRUMP_2025_PROFILE.md  add_remaining_skips.py  bubble.settings  check_quality.py  compliance.db  conftest.py  create_executable.py  (+80 more)
.github/workflows/: ci.yml  django.yml  security.yml
.state/: example_journal.jsonl
backend/: .env.example  asgi.py  health_views.py  production_runner.py  production_settings.py  production_urls.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/api_docs/: __init__.py  schema.py  views.py
backend/auth0login/: admin.py  api_views.py  apps.py  audit.py  auth0backend.py  dashboard_service.py  decorators.py  forms.py  models.py  permissions.py  signals.py  urls.py  views.py
backend/home/: apps.py  tests.py  urls.py  views.py
backend/middleware/: __init__.py  correlation.py  rate_limit.py  security.py
backend/tradingbot/: CLAUDE.md  __init__.py  admin.py  alert_system.py  apimanagers.py  apiutility.py  apps.py  dip_scanner.py  exact_clone.py  exit_planning.py  market_regime.py  models.py  options_calculator.py  production_data_integration.py  production_earnings_protection.py  production_index_baseline.py  production_integration.py  production_logging.py  production_manager.py  production_models_simple.py  production_scanner.py  production_strategy_manager.py  production_strategy_wrapper.py  production_wsb_dip_bot.py  risk_management.py  synchronization.py  test_market_regime_verification.py  test_options_calculator.py  test_production_integration.py  test_production_scanner.py  test_production_strategies.py  test_risk_management_verification.py  test_strategy_smoke.py  test_suite.py  tests.py  trading_interface.py  trading_system.py  urls.py  views.py
backend/validation/: CLAUDE.md  __init__.py  alpha_validation_gate.py  capital_efficiency.py  comprehensive_validation_runner.py  cross_market_validator.py  drift_monitor.py  ensemble_evaluator.py  example_usage.py  factor_analysis.py  implementation_roadmap.py  now.diff  parameter_registry.py  phase1_completion_summary.py  phase2_completion_summary.py  regime_testing.py  reporting.py  simple_phase1_test.py  strategy_improvement_analysis.py  test_leaps_fixes.py  test_phase1_fixes.py  test_phase2_validation.py  validation_orchestrator.py  validation_runner.py
config/: requirements_phase1.txt
db/: taxlots.sql
dev-tools/: migrate_to_production.py
docker/: entrypoint.sh  gunicorn.conf.py
docs/: CLAUDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  HOW_IT_WORKS.md  MODEL_MODULE_DEPRECATION_PLAN.md  PHASE1_README.md  PHASE2_README.md  PHASE2_TESTING_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PRODUCTION_ROADMAP.md  PROJECT_STRUCTURE.md  QUICK_START.md  README_EXACT_CLONE.md  README_REAL_MONEY_TRADING.md  SIGNAL_VALIDATION_INTEGRATION_SUMMARY.md  USER_GUIDE_SUMMARY.md
docs/architecture/: CLAUDE.md  overview.md
docs/production/: PRODUCTION_IMPROVEMENTS.md  PRODUCTION_MODULES.md
docs/runbooks/: circuit-breaker.md  data-quality.md  disaster-recovery.md  high-reject-rate.md  incident-response.md  postmortem-template.md  reconciliation-breaks.md  stale-data.md
docs/strategies/: STRATEGY_TUNING_GUIDE.md
docs/user-guides/: GETTING_STARTED_REAL.md  LAUNCHER_GUIDE.md  README.md
docs/web/: running_the_app.md
examples/: signal_validation_demo.py  wsb_dip_bot_config.py
examples/macos/: README.md  com.wallstreetbots.trading.plist
ml/: README.md
ml/data_collection/: collect_finviz_articles.py  collect_news.py  collect_rss.py  interface.py  save_all_data.py  scrape_finviz.py
ml/tradingbots/: trader.py
ops/: __init__.py  alertmanager.yml  alerts.yml  grafana-datasources.yml  prometheus.yml
scripts/: assets.py  backup.sh  botmanagers.py  bots.py  dr_test.py  integrate_signal_validation.py  quick_test_wsb_modules.py  restore.sh  run.sh  setup.sh  setup_for_real_trading.py  setup_phase1.py  setup_postgres.sh
test_models/: ddpg_model.pkl  ppo_model.pkl
tests/: test_advanced_analytics_comprehensive.py  test_alert_system_comprehensive.py  test_api_managers_comprehensive.py  test_api_managers_simple.py  test_compliance_guard.py  test_corporate_actions.py  test_data_client.py  test_dependencies_fallback.py  test_earnings_protection.py  test_index_baseline.py  test_isolation.py  test_lotto_scanner_comprehensive.py  test_options_assignment_risk.py  test_options_calculator_comprehensive.py  test_options_calculator_real_api.py  test_options_pricing_engine.py  test_pattern_detection.py  test_phase1_basic.py  test_phase2_basic.py  test_phase2_simple.py  test_phase3_comprehensive.py  test_phase4_comprehensive.py  test_production_modules.py  test_production_strategy_manager_comprehensive.py  test_production_strategy_manager_focused_coverage.py  test_risk_engine.py  test_utils.py  test_wash_sale_engine.py  test_wheel_strategy_comprehensive.py  test_wsb_dip_bot_comprehensive.py
tests/analysis/: test_analysis_init_optional_imports.py  test_pdf_report.py
tests/analytics/: test_analytics_and_regime.py  test_month_5_6_advanced_features.py  test_regime_accuracy.py
tests/api/: QUICK_START.md  README.md  test_api_views_comprehensive.py  (+3 more)
utils/: code_quality_wrapper.py  error_handling.py  iteration_helpers.py  yfinance_hardening.py
(+882 files in other folders)
