[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallstreetbots"
version = "0.1.0"
description = "WSB-style strategy bots (dip-after-run, momentum weeklies, spreads, leaps, wheel)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0,<3.0.0",
  "numpy>=1.24.0,<2.0.0",
  "yfinance>=0.2.52,<0.3.0",
  "pytz>=2024.1,<2026.0",
  "requests>=2.31.0,<3.0.0"
]

[project.optional-dependencies]
django = [
    "Django>=3.2.8,<4.0.0",
    "django-cors-headers>=3.10.0",
    "djangorestframework>=3.12.4",
    "psycopg2-binary>=2.9.1",
    "asgiref>=3.4.1",
    "sqlparse>=0.4.2",
    "social-auth-app-django>=5.0",
    "django-admin-interface>=0.18.3",
    "python-jose>=3.3.0",
    "dj-config-url>=0.1.1",
]
broker = [
    "alpaca_trade_api>=1.4.1",
]
ml = [
    "hmmlearn>=0.2.7",
    "plotly>=5.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
wsb-dip-bot = "wsb_dip_bot:main"
momentum-weeklies = "momentum_weeklies:main"
debit-spreads = "debit_spreads:main"
leaps-tracker = "leaps_tracker:main"
lotto-scanner = "lotto_scanner:main"
wheel-strategy = "wheel_strategy:main"

[project.urls]
Homepage = "https://github.com/tashiscool/WallStreetBots"
Repository = "https://github.com/tashiscool/WallStreetBots"
Issues = "https://github.com/tashiscool/WallStreetBots/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "ml*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["backend/tradingbot"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
