[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallstreetbots"
version = "0.1.0"
description = "WSB-style strategy bots (dip-after-run, momentum weeklies, spreads, leaps, wheel)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2.0,<3.0.0",
  "numpy>=1.26.0,<2.3.0",
  "yfinance>=0.2.65,<0.3.0",
  "pytz>=2025.2,<2026.0",
  "requests>=2.32.0,<3.0.0"
]

[project.optional-dependencies]
django = [
    "Django>=4.2.0,<5.0.0",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.0",
    "psycopg2-binary>=2.9.10",
    "asgiref>=3.8.0",
    "sqlparse>=0.5.0",
    "social-auth-app-django>=5.5.0",
    "django-admin-interface>=0.30.0",
    "python-jose>=3.3.0",
    "dj-config-url>=0.1.1",
]
broker = [
    "alpaca-py>=0.42.0",
]
ml = [
    "hmmlearn>=0.3.0",
    "plotly>=6.3.0",
]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.13.0",
]

[project.scripts]
wsb-dip-bot = "wsb_dip_bot:main"
momentum-weeklies = "momentum_weeklies:main"
debit-spreads = "debit_spreads:main"
leaps-tracker = "leaps_tracker:main"
lotto-scanner = "lotto_scanner:main"
wheel-strategy = "wheel_strategy:main"

[project.urls]
Homepage = "https://github.com/tashiscool/WallStreetBots"
Repository = "https://github.com/tashiscool/WallStreetBots"
Issues = "https://github.com/tashiscool/WallStreetBots/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "ml*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
DJANGO_SETTINGS_MODULE = "backend.settings"
